Bug 92706 - CRASH - when autmatically launching table creation wizard after registration of database
Summary: CRASH - when autmatically launching table creation wizard after registration ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Base (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: x86-64 (AMD64) All
: high critical
Assignee: Not Assigned
URL:
Whiteboard: target:5.0.0 target:5.1.0 target:5.0.1
Keywords: haveBacktrace, regression
: 92777 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-07-13 15:44 UTC by Alex Thurgood
Modified: 2016-10-25 19:24 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments
Full bt (29.86 KB, text/plain)
2015-07-13 15:45 UTC, Alex Thurgood
Details
bt with debug symbols on Linux (15.18 KB, text/plain)
2015-07-13 16:22 UTC, Julien Nabet
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alex Thurgood 2015-07-13 15:44:09 UTC
Version: 5.1.0.0.alpha1+
Build ID: 7f0161d88e3a496361e2209d31cc7e9ef42a677e
Locale: fr-FR (fr.UTF-8)

1) Start LO Base
2) Select Create new database (embedde hsqldb)
3) Click on Next.
4) In the following wizard screen , tick the box "create table using the table wizard"
5) Save the database
6) Crash
Comment 1 Alex Thurgood 2015-07-13 15:45:18 UTC
@Michael : one of yours ?
Comment 2 Alex Thurgood 2015-07-13 15:45:59 UTC
Created attachment 117208 [details]
Full bt
Comment 3 Julien Nabet 2015-07-13 16:22:03 UTC
Created attachment 117209 [details]
bt with debug symbols on Linux

On pc Debian x86-64 with master sources updated today, I could reproduce this.
Comment 4 Michael Meeks 2015-07-14 11:45:21 UTC
Pushed a fix to Jenkins for master, -5-0 and -5-0-0 - thanks ! =)
Comment 5 Julien Nabet 2015-07-14 20:24:48 UTC
Michael: with your patch, indeed I don't reproduce the crash! :-)

However, I noticed this on console:
warn:legacy.osl:1569:1:svtools/source/uno/genericunodialog.cxx:323: OGenericUnoDialog::OnDialogDying: where does this come from?
Comment 6 Commit Notification 2015-07-14 21:14:33 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=46e1e1292ac801598e1f43657a1320c45ef8776d&h=libreoffice-5-0-0

tdf#92706 - avoid dbaccess wizard crash.

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-07-16 08:22:28 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9e2e8bb5e6c5a7df376f6ada90703f59c95f19d6

tdf#92706 - avoid dbaccess wizard crash.

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Commit Notification 2015-07-16 09:19:42 UTC
Michael Meeks committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fe1e767e3397da41051a20ae6c80be5e123d07ba&h=libreoffice-5-0

tdf#92706 - avoid dbaccess wizard crash.

It will be available in 5.0.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Terrence Enger 2015-07-19 12:52:18 UTC
*** Bug 92777 has been marked as a duplicate of this bug. ***