tdf#92706 - avoid dbaccess wizard crash.

Hold a VclPtr on the window, make reset cleaner, and don't crash
removing listeners from disposed windows.

Change-Id: I3efb71117fc45562d5c740578f5e33dabb2684fe
Reviewed-on: https://gerrit.libreoffice.org/17038
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>